ajout de la base des gallerie côté ice

--- a/my-react-app/src/assets/Me/me.css
+++ b/my-react-app/src/assets/Me/me.css
@@ -5,6 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  max-width: 1240px;
+  margin: auto;
 }
 
 .me-container {
@@ -18,6 +20,8 @@
   border-top-right-radius: 25px;
   border-top-left-radius: 25px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  max-width: 1025px;
+  overflow: hidden;
 }
 
 .PositionAll {
@@ -37,4 +41,30 @@ p.PresentationText {
 
 h2.introduction {
   font-size: 3vw;
+}
+
+@media (min-width: 1300px) {
+  img.pictureprofile {
+    height: 600px;
+    width: 419px;
+  }
+  .Apropos {
+    width: 700px;
+    margin-left: 30px;
+  }
+  p.PresentationText {
+    font-size: 25px;
+    width: 100%;
+  }
+  h2.introduction {
+    font-size: 40px;
+  }
+  .Presentation.ice {
+    height: 780px;
+    width: 1240px;
+  }
+  .me-container {
+    width: 1025px;
+    height: 560px;
+  }
 }/*# sourceMappingURL=me.css.map */
