--- a/my-react-app/src/assets/Header/header.css
+++ b/my-react-app/src/assets/Header/header.css
@@ -1,8 +1,7 @@
 .logo-header {
-  width: 100%;
-  height: 100px;
   display: flex;
   align-items: center;
+  margin: 5px 10px;
 }
 
 section.navbar {
@@ -17,6 +16,7 @@ section.navbar {
 li {
   list-style: none;
   font-size: 3vw;
+  white-space: nowrap;
 }
 
 ul {
@@ -32,4 +32,20 @@ img.LinkedinLogo {
 
 h1 {
   font-size: 6vw;
+  margin: 10px 0px;
+}
+
+@media (min-width: 1300px) {
+  h1 {
+    font-size: 75px;
+  }
+  li {
+    font-size: 30px;
+  }
+  ul {
+    align-items: center;
+  }
+  img.LinkedinLogo {
+    width: 50px;
+  }
 }/*# sourceMappingURL=header.css.map */
