--- a/my-react-app/src/assets/Header/header.scss
+++ b/my-react-app/src/assets/Header/header.scss
@@ -1,8 +1,7 @@
 .logo-header {
-  width: 100%;
-  height: 100px;
   display: flex;
   align-items: center;
+  margin: 5px 10px;
 }
 
 section.navbar {
@@ -14,10 +13,10 @@ section.navbar {
   width: 100%;
 }
 
-
 li {
   list-style: none;
   font-size: 3vw;
+  white-space: nowrap;
   // border-bottom: solid 1px transparent;
 }
 
@@ -44,5 +43,21 @@ img.LinkedinLogo {
 }
 
 h1 {
-    font-size: 6vw;
+  font-size: 6vw;
+  margin: 10px 0px;
+}
+
+@media (min-width: 1300px) {
+  h1 {
+    font-size: 75px;
+  }
+  li {
+    font-size: 30px;
+  }
+  ul {
+    align-items: center;
+  }
+  img.LinkedinLogo {
+    width: 50px;
+  }
 }
