--- a/my-react-app/src/assets/style.css
+++ b/my-react-app/src/assets/style.css
@@ -1,3 +1,18 @@
 body {
   font-family: "Montserrat";
+  margin: auto;
+}
+
+.titleRealisation {
+  column-count: 3;
+  column-gap: 5px;
+  margin: 5px 5px;
+  max-width: 1240px;
+  margin: auto;
+}
+
+h2.titleGallery {
+  font-size: 6vw;
+  display: flex;
+  justify-content: center;
 }/*# sourceMappingURL=style.css.map */
