mise en place des cards + gallerie

--- a/my-react-app/src/assets/Me/me.css
+++ b/my-react-app/src/assets/Me/me.css
@@ -63,6 +63,10 @@ h2.introduction {
     height: 780px;
     width: 1240px;
   }
+  .Presentation {
+    height: 780px;
+    width: 1240px;
+  }
   .me-container {
     width: 1025px;
     height: 560px;
