--- a/my-react-app/src/assets/Gallery/Gallery.css
+++ b/my-react-app/src/assets/Gallery/Gallery.css
@@ -1,6 +1,18 @@
-/* Create four equal columns that sits next to each other */
-.column img {
+.row {
+  background-color: aliceblue;
+  height: 200px;
   width: 100%;
-  margin-bottom: 5px;
-  display: block;
+}
+
+.column img:hover {
+  filter: alpha(opacity=70);
+  opacity: 0.7;
+  transform: scale(1.1);
+  transition: all 0.3s ease-out;
+}
+
+img.imgGallery {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
 }/*# sourceMappingURL=Gallery.css.map */
