--- a/my-react-app/src/assets/Gallery/Gallery.scss
+++ b/my-react-app/src/assets/Gallery/Gallery.scss
@@ -1,30 +1,22 @@
-
-
 .row {
+    background-color: aliceblue;
+    height: 200px;
+    width: 100%;
 }
 
-/* Create four equal columns that sits next to each other */
+
 .column {
+ 
 }
 
-.column img {
+.column img:hover {
+  filter: alpha(opacity=70);
+  opacity: 0.7;
+  transform: scale(1.1);
+  transition: all 0.3s ease-out;
+}
+img.imgGallery {
+  height: 100%;
+  object-fit: cover;
   width: 100%;
-  margin-bottom: 5px;
-  display: block;
 }
-
-// /* Responsive layout - makes a two column-layout instead of four columns */
-// @media screen and (max-width: 800px) {
-//   .column {
-//     flex: 50%;
-//     max-width: 50%;
-//   }
-// }
-
-// /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-// @media screen and (max-width: 600px) {
-//   .column {
-//     flex: 100%;
-//     max-width: 100%;
-//   }
-// }
