--- a/my-react-app/src/assets/Me/me.scss
+++ b/my-react-app/src/assets/Me/me.scss
@@ -1,29 +1,81 @@
+// .Presentation {
+//   background-color: #d7b326;
+//   width: 100%;
+//   height: 60vw;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   max-width: 1240px;
+//   margin: auto;
+// }
 .Presentation {
-  background-color: #d7b326;
-  width: 100%;
+  background: #00d4ff;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 212, 255, 1) 0%,
+    rgba(25, 127, 148, 1) 65%,
+    rgba(33, 102, 117, 1) 100%
+  );
+  width: 38%;
   height: 60vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   max-width: 1240px;
-  margin: auto;
+  flex-direction: column;
+  margin-left: 10px;
+  position: relative;
 }
-
+.position-img {
+  position: absolute;
+  top: 10vw;
+  left: 20vw;
+}
 .me-container {
-  background-color: #d7d6d6;
-  width: 80vw;
-  height: 43vw;
-  border-top: 5px solid black;
-  border-right: 5px solid black;
-  border-bottom: 5px solid black;
-  border-left: 5px solid black;
-  border-top-right-radius: 25px;
-  border-top-left-radius: 25px;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  width: 35vw;
+  height: 39vw;
+  border: 2px solid #1d5677;
   max-width: 1025px;
   overflow: hidden;
+  position: absolute;
+  top: 7vw;
+  left: 18vw;
+  z-index: 1;
+}
+.introduction {
+  font-size: 5vw;
+  position: absolute;
+  top: 5vw;
+  left: 0;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  color: white;
+  white-space: nowrap;
 }
 
+.introduction-ombre {
+  font-size: 6vw;
+  position: absolute;
+  top: 0vw;
+  left: -15px;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  color: #1d5677;
+  white-space: nowrap;
+}
+h3.Name {
+  position: absolute;
+  left: 19vw;
+  top: 5vw;
+  white-space: nowrap;
+  background: bisque;
+  font-size: 4vw;
+}
+.Salutation {
+  position: absolute;
+  top: -10vw;
+  left: 18vw;
+  color: #1d5677;
+  font-size: 8vw;
+  font-weight: bold;
+}
 .PositionAll {
   display: flex;
   flex-direction: row-reverse;
@@ -32,42 +84,73 @@
 
 img.pictureprofile {
   height: 43vw;
+  border: 2px solid #1d5677;
 }
-p.PresentationText {
-  font-size: 2vw;
+.PresentationText {
+  font-size: 2.5vw;
   width: 44vw;
+  position: absolute;
+  left: 13vw;
+  top: 15vw;
 }
 
 h2.introduction {
-  font-size: 3vw;
+  font-size: 4vw;
+  color: white;
+}
+.tes {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-@media (min-width: 1300px) {
-  img.pictureprofile {
-    height: 600px;
-    width: 419px;
-  }
-  .position-img {
-    // margin-top: 9vw;
-  }
-  .Apropos {
-    width: 700px;
-    margin-left: 30px;
-  }
-  p.PresentationText {
-    font-size: 25px;
-    width: 100%;
-  }
-  h2.introduction {
-    font-size: 40px;
-  }
-  .Presentation.ice {
-    height: 780px;
-    width: 1240px;
-  }
-
-  .me-container {
-    width: 1025px;
-    height: 560px;
-  }
+.Presentation-back {
+  position: relative;
+  height: 100%;
 }
+
+// .me-container {
+//   background-color: #d7d6d6;
+//   width: 80vw;
+//   height: 43vw;
+//   border-top: 5px solid black;
+//   border-right: 5px solid black;
+//   border-bottom: 5px solid black;
+//   border-left: 5px solid black;
+//   border-top-right-radius: 25px;
+//   border-top-left-radius: 25px;
+//   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+//   max-width: 1025px;
+//   overflow: hidden;
+// }
+
+
+// @media (min-width: 1300px) {
+//   img.pictureprofile {
+//     height: 600px;
+//     width: 419px;
+//   }
+//   .position-img {
+//     // margin-top: 9vw;
+//   }
+//   .Apropos {
+//     width: 700px;
+//     margin-left: 30px;
+//   }
+//   p.PresentationText {
+//     font-size: 25px;
+//     width: 100%;
+//   }
+//   h2.introduction {
+//     font-size: 40px;
+//   }
+//   .Presentation {
+//     height: 780px;
+//     width: 1240px;
+//   }
+
+//   .me-container {
+//     width: 1025px;
+//     height: 560px;
+//   }
+// }
